--- a/.github/workflows/Build_Lenovo_sm8750.yml
+++ b/.github/workflows/Build_Lenovo_sm8750.yml
@@ -284,16 +284,9 @@ jobs:
           cp ./SukiSU_patch/hooks/scope_min_manual_hooks_v1.6.patch ./common/
           cp ./SukiSU_patch/69_hide_stuff.patch ./common/
           cd ./common
-          case "${{ github.event.inputs.sub_level }}" in
+          case "${{ github.event.inputs.sub_level }}"in
             6.6.56)
-              TASK_MMU_C="fs/proc/task_mmu.c"
-              if grep -q "vma = find_vma(mm, start_vaddr);" "$TASK_MMU_C"; then
-                echo "为 fs/proc/task_mmu.c 中的 vma 注入类型声明..."
-                sed -i 's/vma = find_vma(mm, start_vaddr);/struct vm_area_struct *vma = find_vma(mm, start_vaddr);/' "$TASK_MMU_C"
-              else
-                echo "未找到 vma = find_vma(mm, start_vaddr);，可能已经修过或补丁不一致，跳过"
-              fi
-              ;;
+              sed -i 's|vma = find_vma(mm|struct vm_area_struct *&|' ./fs/proc/task_mmu.c
           esac
           patch -p1 < 50_add_susfs_in_gki-android15-6.6.patch || true
           patch -p1 < 69_hide_stuff.patch || true
